# libweif

./: .hgignore  .hgtags  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json  weif.pc.in
.github/workflows/: ctest.yml
cmake/: CheckBoostMathSpecialFunctions.cmake  FindRapidcsv.cmake
example/: aperture_filter.cpp  diff_motion_weight_function.cpp  digital_filter_2d.cpp  mass_weight_function.cpp  spectral_filter.cpp  weight_function.cpp  weight_function_2d.cpp  weight_function_grid_2d.cpp
include/: aperture_filter.h  cubic_spline.h  digital_filter_2d.h  error.h  fftw3_wrap.h  spectral_filter.h  spectral_response.h  uniform_grid.h  weight_function.h  weight_function_2d.h  weight_function_base.h  weight_function_grid_2d.h
include/weif/: digital_filter_2d.h  error.h  math.h  spectral_filter.h  spectral_response.h  uniform_grid.h  weight_function.h  weight_function_2d.h  weight_function_grid_2d.h
include/weif/af/: angle_averaged.h  circular.h  gauss.h  point.h  square.h
include/weif/af/detail/: impl.h
include/weif/detail/: cubic_spline.h  fftw3_wrap.h  uniform_grid.h  weight_function_base.h
include/weif/sf/: gauss.h  mono.h  poly.h
src/: digital_filter_2d.cpp  error.cpp  spectral_filter.cpp  spectral_response.cpp  weight_function.cpp  weight_function_2d.cpp  weight_function_grid_2d.cpp
src/sf/: poly.cpp
test/: af.cpp  cubic_spline.cpp  math.cpp  sf.cpp  uniform_grid.cpp  weight_function.cpp  xexpression.h
